# hit_exolimb_motion

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
configs/: datasets.example.json  pipeline.yaml
data/demo/: overhead_pose.jsonl
data/overhead_video/: pose.jsonl  pose_apple_vision.jsonl  pose_apple_vision_stabilized.jsonl  pose_deepmotion.jsonl  pose_deepmotion_hands_fused.jsonl  pose_deepmotion_uv.jsonl  pose_mediapipe_hands.jsonl  pose_mediapipe_inset_hands.jsonl  pose_rokoko.jsonl
docs/: OVERHEAD_WORK_MODEL.md  TECH_STACK.md
frontend/: ai4Avatar.ts  data.ts  main.ts  mediapipeVideo.ts  mujoco.ts  styles.css  types.ts  viewer.ts
outputs/: demo_assist_plan.json  demo_segments.json  ha_vid_layout.json  overhead_video_assist_plan.json  overhead_video_assist_plan_apple_vision.json  overhead_video_assist_plan_deepmotion_hands_fused.json  overhead_video_assist_plan_deepmotion_uv.json  overhead_video_assist_plan_rokoko.json  overhead_video_segments.json  overhead_video_segments_apple_vision.json  overhead_video_segments_apple_vision_tuned.json  overhead_video_segments_deepmotion.json  overhead_video_segments_deepmotion_hands_fused.json  overhead_video_segments_rokoko.json
outputs/deepmotion/: overhead_customModel_hXBrhdpmbtpo6dwf3zVGyw.bvh
outputs/rokoko/: overhead_rokoko.fbx
scripts/: apple_vision_pose.swift  capture-viewer.mjs  import-rokoko-fbx.mjs
src/hit_exolimb_motion/: __init__.py  assist.py  cli.py  datasets.py  demo.py  fusion.py  io.py  overhead.py  skeleton.py  splitview.py  stabilize.py  (+1 more)
(+9 files in other folders)
