[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hit-exolimb-motion"
version = "0.1.0"
description = "Overhead work human motion modeling and exolimb assistance planning."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10.14", "numpy>=1.26"]
mmpose = ["openmim>=0.3.9", "mmpose>=1.3.2", "mmengine>=0.10.7", "mmdet>=3.3.0", "mmcv-lite<2.2.0", "numpy<2"]

[project.scripts]
hit-exolimb-motion = "hit_exolimb_motion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.extra-build-dependencies]
chumpy = ["pip", "setuptools"]
